--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -17,36 +17,35 @@ lehetőséget nyújtanak a hagyományos analóg hangrendszerekhez
 képes gyorsabb, megbízhatóbb és skálázhatóbb megoldások alkalmazására. 
 A Dante protokoll technológiai előnyei közé tartozik az alacsony 
 késleltetés, a magas szintű jelminőség és a hálózati redundancia 
-biztosítása, ami különösen fontos az élő produkciók során.
+biztosítása, ami különösen fontos élő produkciók során.
 
 Az 1. fejezet bevezeti a szakdolgozat témáját és eredetét,
-miért is ezt a témát választotta a szerző.
+miért is ezt a témát választottam.
 
 A 2. fejezet az alapvető hangtechnikai fogalmakat és rendszereket 
 mutatja be, beleértve az analóg és digitális hangrendszerek 
 közötti eltéréseket. Ismerteti a digitális audiojelek 
 feldolgozásának alapjait, kitér a hangerősségre, a hangnyomásszintre, valamint a 
-különböző hangforrások, mint a pontsugárzók és a LineArray 
-rendszerek közötti eltérésekre. 
+különböző hangforrások közötti eltérésekre. 
 
 A 3. fejezet célja, hogy alaposan bemutassa a digitális audió 
 rendszerek alapjait és a Dante protokoll technikai részleteit. 
 Ebben a részben többek között bemutatásra kerülnek az IP-címek kiosztásának módszerei, 
 a hálózati topológiák kialakítása, 
-valamint a különböző hálózati eszközök, mint például switchek szerepei.
+valamint a különböző hálózati eszközök, mint például a switchek szerepei.
 
 A 4. fejezet a tervezési és telepítési folyamatot tárgyalja, 
 különös figyelmet szentelve a felhasznált eszközöknek, 
 mint például a hangprocesszorok, végerősítők és 
 hangszórók. A tervezési szakasz kulcsfontosságú eleme a
 rendszer méretezése és konfigurálása, amely figyelembe 
-veszi a produkció követelményeit, mint például a helyszín 
+veszi a produkció követelményeit, a helyszín 
 méretét, a közönség elrendezését és az előadás 
 specifikus igényeit. Ezen felül bemutatom a Dante 
 Controller szoftver használatát, amely lehetővé teszi a 
 hálózati eszközök konfigurálását és a forgalom 
 monitorozását. 
-A telepítés során a Dante-alapú hálózat  kiépítése mellett kiemelten
+A telepítés során a Dante alapú hálózat  kiépítése mellett kiemelten
 foglalkozom a hangminőség optimalizálásával. A valós környezetben 
 végzett tesztelés során a rendszer megbízhatóságát és 
 rugalmasságát is értékelem.
@@ -80,67 +79,49 @@ kínál a modern élőzenei produkciók számára.
 % TODO: Távolítsd el a megjegyzést, ha mégis szeretnéd, hogy bekerüljön a tartalomjegyzékbe
 %\addcontentsline{toc}{chapter}{Abstract}
 
-The aim of my thesis is to design, build, optimize, and 
-commission an audio system for a live music production, 
-which is based on the Dante protocol. Audio over IP 
-systems, particularly Dante networks, provide faster, 
-more reliable, and scalable solutions compared to 
-traditional analog sound systems. The technological 
-advantages of the Dante protocol include low latency, 
-high signal quality, and network redundancy, which are 
-particularly important during live productions.
+The aim of my thesis is to design, build, optimize, and deploy a sound system 
+for a live music production, based on the Dante protocol. 
+Audio over IP systems, particularly Dante networks, enable the use 
+of faster, more reliable, and scalable solutions compared to 
+traditional analog sound systems. Among the technological 
+advantages of the Dante protocol are low latency, high signal quality, 
+and network redundancy, which are crucial for live productions.
 
-Chapter 1 introduces the topic of the thesis and its 
-origin, explaining why the author chose this subject.
+Chapter 1 introduces the topic and origin of the thesis, 
+explaining why I chose this subject.
 
-Chapter 2 presents fundamental audio engineering 
-concepts and systems, highlighting the differences 
-between analog and digital sound systems. It discusses 
-the basics of processing digital audio signals, 
-addresses volume levels, sound pressure levels, and 
-differences between various sound sources, such as 
-point sources and Line Array systems.
+Chapter 2 presents the basic concepts and systems of audio technology, 
+including the differences between analog and digital sound systems. 
+It covers the fundamentals of digital audio signal processing, 
+addressing aspects like volume, sound pressure levels, and differences 
+among various sound sources.
 
-Chapter 3 aims to thoroughly present the foundations 
-of digital audio systems and the technical details of 
-the Dante protocol. This section includes a discussion 
-on methods for assigning IP addresses, the design of 
-network topologies, and the roles of various network 
-devices, such as switches.
+Chapter 3 thoroughly explores the foundations of digital audio systems 
+and the technical details of the Dante protocol. This section includes 
+methods for IP address allocation, network topology design, and the 
+roles of various network devices such as switches.
 
-Chapter 4 covers the design and installation process, 
-paying special attention to the utilized equipment, 
-including audio processors, power amplifiers, and 
-speakers. A crucial element of the design phase is 
-the sizing and configuration of the system, which 
-takes into account production requirements, such as 
-the venue size, audience layout, and specific needs 
-of the performance. Additionally, I present the use of 
-the Dante Controller software, which allows for the 
-configuration of network devices and traffic monitoring. 
-During the installation, alongside building the Dante- 
-based network, I focus on optimizing sound quality. 
-In tests conducted in real environments, I also assess 
-the reliability and flexibility of the system.
+Chapter 4 discusses the design and installation process, with special 
+attention to the equipment used, such as audio processors, amplifiers, and speakers. 
+A critical aspect of the design phase is the sizing and configuration 
+of the system, considering the production requirements, venue size, 
+audience layout, and specific needs of the performance. 
+Additionally, I demonstrate the use of Dante Controller software for 
+configuring network devices and monitoring traffic. During installation, 
+I focus on building a Dante-based network while optimizing sound quality. 
+The testing phase evaluates the reliability and flexibility of the system in a real-world environment.
 
-Chapter 5 addresses the operational experiences post- 
-installation. I provide a detailed account of the 
-integration of the system into a live music production 
-by TéDé Rendezvények, where I tested the performance 
-of the Dante network in real-time. This section discusses 
-the importance of the integration between the sound 
-system and control systems, as well as the management 
-of acoustic and network challenges encountered during 
-the performance. Based on the results, I propose further 
-development opportunities that could enhance the 
-performance and flexibility of the system.
+Chapter 5 addresses the operational experiences after installation. 
+It provides a detailed account of integrating the system into a 
+live music production by TéDé Rendezvények, where I tested the performance 
+of the Dante network in real-time. This chapter discusses the importance of 
+integrating the sound and control systems and how I handled acoustic and 
+network challenges during the performance. Based on the results, 
+I propose further development opportunities to enhance the system’s performance and flexibility.
 
-The system I presented offers significant advantages 
-over analog sound systems. The operational experiences 
-demonstrate that Audio over IP technologies, particularly 
-Dante, provide a stable, scalable, and reliable solution 
-for modern live music productions.
-
+The system presented in my thesis offers significant advantages over analog sound systems. 
+The operational experiences confirm that Audio over IP technologies, especially Dante, 
+provide a stable, scalable, and reliable solution for modern live music productions.
 
 \vfill
 \selectthesislanguage
