feat(fixes): typos

--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -724,7 +724,7 @@ alábbi minimális specifikációknak:
 \begin{itemize}
 	\item Unicast és multicast támogatása
 	\item UDP/RTP protokollok használata
-	\item DSCP címkék beállítása meghatározott értékekre,QoS támogatás 
+	\item DSCP címkék beállítása meghatározott értékekre, QoS támogatás 
 	\item Nincs meghatározott automatikus eszköz- és adatfolyam-felfedezés 
 	\item PTPv2 szabvány használata az időszinkronizációhoz
 	\item PTP profil Standard (a gyakorlatban a Dante jelenleg magasabb szinkronizációs rátát igényel)
@@ -792,7 +792,7 @@ A 2020-2021-es Covid-19 járvány során lehetőségem volt részt venni egy át
 kurzuson, amelyet a Dante technológia fejlesztője, az Audinate szervezett. A kurzus
 részletes betekintést nyújtott a Dante hálózatok működésébe. E fejezetben a belsős
 oktatóanyagokat is fel fogom felhasználni, amelyeket a kurzus alatt kaptam. Ezek a dokumentumok
-csak a kurzus résztvevői számára elérhetők, így konkrét dokumentumként nem publikálhatók. 
+csak a kurzus résztvevői számára elérhetők, így konkrét dokumentumként nem publikálhatóak. 
 %Ebből következően ezen írásokat konkrét hivatkozások nélkül fogom felhasználni, mivel
 %hivatkozásuk nem lehetséges.
 %Viszont fontos megjegyezni, hogy a fejezetben szereplő ábrák és információk az Audinate tulajdonát képezik.
@@ -829,7 +829,7 @@ Amennyiben több eszköz hangot küld egy adott végpontra a hálózaton, az ala
 esetén az elsőként érkezők előnyben részesülnek. A Dante hanghálózatok Quality of Service (QoS) támogatást is nyújtanak, 
 amely a prioritások kezelését biztosítja. Ezáltal a hangátvitel előnyt élvezhet más hálózati forgalommal szemben, csökkentve 
 a hálózati torlódás esélyét és biztosítva a minimális késleltetést valamint a magas minőséget. Körülbelül 70 százalékos 
-hálózati szaturációnál már javasolt a QoS alkalmazása, míg 100 Mbps sebességű hálózatok esetén a jitter csökkentésére is 
+hálózati szaturációnál már javasolt a QoS alkalmazása, míg 100 Mbps sebességű hálózatok esetén a jitter csökkentésében is 
 segít.
 %----------------------------------------------------------------------------
 \subsubsection{Több mintavételi ráta és bitmélység}
@@ -937,7 +937,7 @@ először hallja a hangszerét a fülmonitoron, mint a saját dobját.
 %----------------------------------------------------------------------------
 \subsubsection{Órajel}
 %----------------------------------------------------------------------------
-Minden eszköz egy rendkívül pontos Dátum/Idő órát követ, amely biztosítja az 
+Minden eszköz egy rendkívül pontos dátum/idő órát követ, amely biztosítja az 
 idő szinkronizációját és az egységes sebességet. De mi a helyzet a terjedési 
 késéssel? Miért vannak szinkronban a Dante eszközök? A PTP (Precision Time Protocol) 
 késleltetési kéréseket (Delay Requests) indít, amelyek segítségével kiszámítják 
