--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -56,7 +56,7 @@ Ezekre az eszközökre készítettem egy unified konfigurációt, amely minden o
 beállítást kikapcsol, amelyekre egy normál internetes hálózatban szükség lenne, de egy zárt hálózatban ahol kizárólag
 a Dante eszközök kommunikálnak egymással, ezek a beállítások csak felesleges terhelést jelentenének a hálózaton.
 Valamint amennyiben még több eszközt szeretnénk a hálózatra kötni, akkor a switchek gyorsan üzembe helyezhetőek,
-mivel a konfiguráció már előre elkészítve, csak fel kell tölteni a beállításokat, valamint firmware-t egyeztetni.
+mivel a konfiguráció már előre készen áll, csak fel kell tölteni a beállításokat, valamint firmware-t egyeztetni.
 Az egyik switch a Dante elsődleges hálózatát fogja kizárólag kezelni.
 A másik switch a Dante másodlagos hálózatát, és a VU-NET hálózatot fogja kezelni.
 Ez a két alhálózat VLAN szegmensekbe lesz elkülönítve, hogy a hálózat biztosan stabil legyen, ne fordulhassanak elő csomagütközések.
