feat(fixes): typos

--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -574,13 +574,13 @@ tartottam meg.
 %----------------------------------------------------------------------------
 Miután végeztünk a hálózat konfigurációjával, a munkánk nem ér véget, hiszen
 a rendszer működését folyamatosan monitorozni kell. 
-Minden egyes eszköznél a lantecy oldalon láthatjuk az aktuális és átlagos késleltetési értékeket.
+Minden egyes eszköznél a \textit{``Lantecy''} oldalon láthatjuk az aktuális és átlagos késleltetési értékeket.
 Amennyiben ez az érték a konfigurált késésnél alacsonyabb, akkor a rendszerünk
 stabilan működik. Ha azonban magasabb, vagy néha drasztikusan közel kerül ehhez az értékhez akkor azonnal cselekednünk kell, mivel
 azt kockáztatjuk, hogy a rendszerünk instabil lesz, és a produkció közben problémák léphetnek fel.
 Egy élő produkciónál a hangkimaradás vagy kiszámíthatatlan pattanások megengedhetetlenek, és az egész rendezvényre 
 rá nyomja a bélyegét. Miután az egyes eszközök értékeit ellenőriztük, átválthatunk egy átfogó hálózat nézetre,
-a Network Status fülre, ahol az összes eszköz késleltetési értékeit egyszerre láthatjuk. Ezen kívül még elérhető
+a \textit{``Network Status''} fülre, ahol az összes eszköz késleltetési értékeit egyszerre láthatjuk. Ezen kívül még elérhető
 metrikák:
 %----------------------------------------------------------------------------
 \begin{itemize}
