feat(fixes): typos

--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -204,7 +204,7 @@ egy 1 kHz-es szinuszhang hangnyomásszintjén, amely azonos hangosságérzetet k
 
 Hangosság (Hangnyomásszint):
 A hangosság az egyidejűleg megszólaló hangok összefoglaló mértékét jelöli, amelyet a sone egységében mérünk. 
-A kiszámítása során, ha a hangerőség meghaladja a 40 phon értéket, a hangosságot sone-ban adják meg.
+A kiszámítása során, ha a hangerősség meghaladja a 40 phon értéket, a hangosságot sone-ban adják meg.
 
 A dB-skála a hangnyomásszint logaritmikus kifejezésére szolgál. Az emberi hallás érzékenysége különböző 
 frekvenciákon eltérő, és a decibelskála lehetővé teszi, hogy az emberi hallás által 
