--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -694,7 +694,7 @@ Jelen esetben ez teljes mértékben felesleges, mivel a rendszerben kizárólag 
 %----------------------------------------------------------------------------
 Ez a kiegészítő szerver egység lehetővé teszi bármilyen alacsony késleltetéssel dolgozó VST3 plugin használatát a rendszerben elő környezetben.
 Olyan komplex funkcionalitásokat is elérhetünk, amelyek a keverőpulton csak limitáltan, vagy egyáltalán nem elérhetőek.
-Gondolva itt a dinamikus EQ használatára, különböző kompressziós technikákra (például Opto, Multiband Compressor), 
+Gondolva itt a dinamikus EQ használatára, különböző kompressziós technikákra (például Opto, Multiband Compressor).
 A legnagyobb előnye ennek a fajta megoldásnak, hogy költségek szempontjából egy magasabb kategóriás keverőpult rendszer sokkal drágább lenne,
 valamint nem vagyunk korlátozva a keverőpult által biztosított funkcionalitásokkal, bármikor tudunk igényeink szerint újabb és újabb pluginokat
 telepíteni a rendszerbe, amíg a számítógép hardveres erőforrásai ezt lehetővé teszik.
