feat(style): 12pt

--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -198,7 +198,7 @@ A professzionális ADC és DAC konverterek nagymértékben befolyásolják a han
 \section{Hangerősség és hangnyomásszint} % Mi a hangerősség és a hangnyomásszint? Hogyan mérjük őket? Mi a különbség közöttük?
 %----------------------------------------------------------------------------
 Hangerőség (Intenzitás):
-A hangerőség az a szubjektív hangosságérzet, amely a fizikai hangnyomás szintjétől függ. 
+A hangerősség az a szubjektív hangosságérzet, amely a fizikai hangnyomás szintjétől függ. 
 Ennek mértéke phonban van kifejezve, ahol a hangerőség értéke annyi phon, ahány dB-t mérünk 
 egy 1 kHz-es szinuszhang hangnyomásszintjén, amely azonos hangosságérzetet kelt.
 
