--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -93,6 +93,8 @@ bővítés előtt alaposan mérlegelni kell, hogy valóban szükséges-e.
     \label{fig:shure_axient_digital}
 \end{figure}
 %----------------------------------------------------------------------------
+\begin{comment}
+    
 \subsubsection{TASCAM multitrack recorder} %TASCAM – DA-6400
 %----------------------------------------------------------------------------
 Egy másik fejlesztési lehetőség a rendszerben egy multitrack recorder beszerzése.
@@ -114,6 +116,8 @@ menthetjük, majd további feldolgozásra továbbíthatjuk.
     \label{fig:tascam_da_6400}
 \end{figure}
 %---------------------------------------------------------------------------- 
+\end{comment}
+
 \subsubsection{Allen \& Heath ME Personal Mixing System} % Előadóknak egyéni keverési lehetőség
 %----------------------------------------------------------------------------
 Az Allen \& Heath ME Personal Mixing System egy korszerű és kivételesen
