--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,7 @@
 % !TeX encoding = UTF-8
 % !TeX program = pdflatex
 % !TeX TXS-program:compile = txs:///python//usr/bin/python3
-\documentclass[11pt,a4paper,oneside]{report}             % Egyoldalas (javasolt)
+\documentclass[12pt,a4paper,oneside]{report}             % Egyoldalas (javasolt)
 %\documentclass[11pt,a4paper,twoside,openright]{report}  % Duplex
 \input{include/packages}
 %--------------------------------------------------------------------------------------
@@ -16,6 +16,7 @@
 \usepackage{amsmath}
 \usepackage{ragged2e}
 \usepackage{array}
+\usepackage{times}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
@@ -48,6 +49,8 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 
 \newcommand{\szerzoMeta}{\szerzoVezeteknev{} \szerzoKeresztnev} % egy szerző esetén TODO@FMA két szerző
 \input{include/preamble} % beállítások, nem kell vele foglalkoznod remélhetőleg, de ha valami latex hekkelésre vagy új parancsra van szükséged annak itt a helye
+
+% A default szöveg legyen times new roman 12-es
 
 
 %--------------------------------------------------------------------------------------
