--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -30,24 +30,6 @@ stabilan kihagyás nélkül működött a teljes üzemidő alatt.
     \caption{A szakdolgozat szerzője a megépített WPC Line Array mögött emelés előtt}
 \end {figure}
 %----------------------------------------------------------------------------
-%----------------------------------------------------------------------------
-\begin {figure}[H]
-    \centering
-	\includegraphics[width=250px]{figures/wpc_deployed.jpg}
-	\caption{A megépített WPC Line Array}
-\end {figure}
-%----------------------------------------------------------------------------
-%----------------------------------------------------------------------------
-\begin {figure}[H]
-	\centering
-	\includegraphics[width=300px]{figures/system_deployed.jpg}
-	\caption{A teljes rendszer}
-\end {figure}
-%----------------------------------------------------------------------------
-% Plusz ötletek:
-% Mitől  a legjobb a dante, mire képes a szoftver, milyen limitációk vannak benne, milyen fejlesztési irányelveket fogalmaznál meg, 
-% Miben könnyíti meg a munkád?
-%----------------------------------------------------------------------------
 \section{Továbbfejlesztési lehetőségek}
 %----------------------------------------------------------------------------
 \subsection{További eszközök integrálása}
@@ -88,7 +70,7 @@ bővítés előtt alaposan mérlegelni kell, hogy valóban szükséges-e.
 \begin
     {figure}[H]
     \centering
-    \includegraphics[width=100mm, keepaspectratio]{figures/axient_digital.png}
+    \includegraphics[width=70mm, keepaspectratio]{figures/axient_digital.png}
     \caption{Shure Axient Digital vezeték nélküli mikrofon rendszer}
     \label{fig:shure_axient_digital}
 \end{figure}
@@ -125,9 +107,6 @@ rugalmas megoldás az előadók számára, amely lehetővé teszi az egyéni
 monitorkeverést. Ez különösen fontos olyan helyzetekben,
 ahol a színpadon több zenész dolgozik együtt, és mindegyikük
 egyedi monitor igényekkel rendelkezik, ezek most már általában fülmonitorok.
-A rendszer egyszerre biztosít professzionális hangminőséget és egyszerű kezelhetőséget, amely által az
-előadók gyorsan és könnyen testre szabhatják a saját keverési beállításaikat
-annak érdekében, hogy a legjobban hallják önmagukat és a többi zenészt.
 Az Allen \& Heath ME rendszer három fő komponensből áll: a ME-U 
 disztribúciós hubból, a ME-500 személyi keverőegységből, valamint a 
 Dante hálózati kompatibilitást biztosító M-DANTE kártyából.
@@ -155,14 +134,7 @@ a Dante alapú hálózati audió rendszerekkel.
     \end{minipage}
 \end{figure}
 %----------------------------------------------------------------------------
-A ME-500 személyi keverőegység az előadók számára készült,
-lehetővé téve, hogy egyéni igényeik szerint keverhessék a monitorozott
-hangsávokat. Az egység egyszerű és intuitív felhasználói felülettel 
-rendelkezik, amelyet úgy terveztek, hogy a zenészek, akár minimális
-technikai tudással is, gyorsan megtanulhassák a használatát. 
-A rendszer további előnye, hogy könnyedén integrálható 
-már meglévő audió hálózatokba, ami széleskörű kompatibilitást biztosít.
-%----------------------------------------------------------------------------
+\begin{comment}
 \begin
     {figure}[H]
     \centering
@@ -170,6 +142,7 @@ már meglévő audió hálózatokba, ami széleskörű kompatibilitást biztosí
     \caption{Allen \& Heath ME-500 személyi keverőegység}
     \label{fig:martin_audio_wpl}
 \end{figure}
+\end{comment}
 %----------------------------------------------------------------------------
 %----------------------------------------------------------------------------
 \subsubsection{Martin Audio WPL LineArray rendszer} % Nagyobb rendezvényekre
@@ -186,7 +159,7 @@ bővítése előtt alaposan mérlegelni kell, megtérül-e a befektetés hosszab
 \begin
     {figure}[H]
     \centering
-    \includegraphics[width=80mm, keepaspectratio]{figures/wpl_front_view.jpg}
+    \includegraphics[width=50mm, keepaspectratio]{figures/wpl_front_view.jpg}
     \caption{Martin Audio WPL LineArray modul}
     \label{fig:martin_audio_wpl}
 \end{figure}
@@ -208,7 +181,7 @@ stageboxokat is beszerezni az igényelt csatornaszám eléréséhez.
 \begin
     {figure}[H]
     \centering
-    \includegraphics[width=80mm, keepaspectratio]{figures/dlive-s7000.jpg}
+    \includegraphics[width=60mm, keepaspectratio]{figures/dlive-s7000.jpg}
     \caption{Allen \& Heath dLive S7000 keverőpult}
     \label{fig:dLive_S7000}
 \end{figure}
