--- a/thesis.tex
+++ b/thesis.tex
@@ -10,7 +10,10 @@
 \usepackage{float}
 \usepackage{hyperref}
 \usepackage{url}
-\usepackage{graphicx}
+\usepackage{caption}
+\usepackage{graphicx} % Képek kezeléséhez
+\usepackage{listings} % Kódrészletekhez
+\usepackage{booktabs} % Táblázatokhoz
 \usepackage{comment}
 \usepackage[magyar]{babel}
 \usepackage{amsmath}
@@ -27,6 +30,86 @@
 \fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0.5pt}
 \renewcommand{\footrulewidth}{0pt}
+
+\usepackage{titlesec}
+% 1. szint: Decimális számozás, 3.1.3-ban meghatározott stílus
+\titleformat{\section}[block]
+  {\bfseries\fontsize{16pt}{19.2pt}\selectfont} % Félkövér, 16pt betűméret
+  {\thesection.} % Számozás
+  {1em} % Címszöveg előtti távolság
+  {} % Címszöveg formázása
+
+\titlespacing{\section}
+  {0pt} % Bal oldali behúzás
+  {24pt} % Cím előtti térköz
+  {18pt} % Cím utáni térköz
+
+% 2. szint: Decimális számozás, stílus szerint
+\titleformat{\subsection}[block]
+  {\bfseries\fontsize{14pt}{16.8pt}\selectfont} % Félkövér, 14pt betűméret
+  {\thesubsection.}
+  {1em}
+  {}
+
+\titlespacing{\subsection}
+  {0pt}
+  {18pt}
+  {12pt}
+
+% 3. szint: Decimális számozás, stílus szerint
+\titleformat{\subsubsection}[block]
+  {\normalfont\fontsize{14pt}{16.8pt}\selectfont} % Normál, 14pt betűméret
+  {\thesubsubsection.}
+  {1em}
+  {}
+
+\titlespacing{\subsubsection}
+  {0pt}
+  {12pt}
+  {6pt}
+
+% 4. és további szintek: egyéni meghatározás
+\titleformat{\paragraph}[runin]
+  {\normalfont\normalsize\selectfont}
+  {}
+  {0em}
+  {}
+
+\titlespacing{\paragraph}
+  {0pt}
+  {6pt}
+  {3pt}
+
+% Alapértelmezett képaláírás beállítás
+\captionsetup{
+  font=bf, % Félkövér
+  labelfont=bf,
+  format=plain,
+  justification=centering, % Középre igazítás
+  textfont={bf,rm}, % Times New Roman betűtípus
+  labelsep=period, % Pont a típus és a cím között
+  %skip=6pt, % Cím előtti térköz
+  %belowskip=18pt % Cím utáni térköz
+}
+
+% Képek és ábrák képaláírásai (objektum alatt)
+\captionsetup[figure]{position=below}
+
+% Táblázatok és kódrészletek képaláírásai (objektum felett)
+\captionsetup[table]{position=above}
+\captionsetup[lstlisting]{position=above}
+
+% Példa betűtípus módosításra (Times New Roman)
+\renewcommand{\rmdefault}{ptm}
+
+% Kódrészlet környezet konfigurálása
+\lstset{
+  basicstyle=\ttfamily\small, % Alap betűtípus
+  captionpos=t, % Képaláírás fent
+  frame=single, % Keret
+  numbers=left, % Sorok számozása
+  numberstyle=\tiny
+}
 
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
